force-app/main/default/objects/MW_Callout__c/MW_Callout__c.object-meta.xml
<CustomObject>
    <label>MW_Callout</label>
    <nameField>
        <label>MW_Callout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MW_Callout</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>