force-app/main/default/objects/MW_Callout__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>MW_Callout</relationshipLabel>
    <relationshipName>MW_Callout</relationshipName>
    <type>Lookup</type>
</CustomField>