force-app/main/default/objects/MW_Callout__c/fields/CalloutResponseTime__c.field-meta.xml
<CustomField>
    <fullName>CalloutResponseTime__c</fullName>
    <label>CalloutResponseTime</label>
    <type>DateTime</type>
</CustomField>