force-app/main/default/objects/MW_Callout__c/fields/JobID__c.field-meta.xml
<CustomField>
    <fullName>JobID__c</fullName>
    <label>JobID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>